--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stensgaard Farming</title>
     <meta name="description" content="Stensgaard Farming is een boerderij gevestigd in denemarken die koeien houdt en aardappels verbouwt.">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/public/style.css">
   </head>
 <body>
     <header>
