--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stensgaard Farming</title>
     <meta name="description" content="Stensgaard Farming is een boerderij gevestigd in denemarken die koeien houdt en aardappels verbouwt.">
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="static.css">
   </head>
 <body>
     <header>
-        <a href="/"><img src="/img/logo.png" alt="Stensgaard Farming" width="100" height="100"></a>
+        <a href="/"><img src="./static-img/logo.png" alt="Stensgaard Farming" width="100" height="100"></a>
 
         <button>
             <span></span>
@@ -28,17 +28,17 @@
             <ul class="language-switcher">
                 <li>
                     <a href="/danish">
-                        <img src="/img/danish-flag.png" alt="Danish Flag">
+                        <img src="./static-img/danish-flag.png" alt="Danish Flag">
                     </a>
                 </li>
                 <li>
                     <a href="/english">
-                        <img src="/img/english-flag.png" alt="UK Flag">
+                        <img src="./static-img/english-flag.png" alt="UK Flag">
                     </a>
                 </li>
                 <li>
                     <a href="/dutch">
-                        <img src="/img/dutch-flag.png" alt="Dutch Flag">
+                        <img src="./static-img/dutch-flag.png" alt="Dutch Flag">
                     </a>
                 </li>
             </ul>
@@ -53,13 +53,15 @@
         </div>
     </section>
 
-    <section class="about-us">
-        <h2>About us</h2>
-        <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Praesent non volutpat tellus. Praesent non mattis quam. Morbi a enim massa. 
-            Nunc vel euismod enim, eget dignissim urna. Praesent nec odio ac purus rutrum laoreet at et est. 
-            Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrum</p>
-    </section>
+    <main>
+        <section class="about-us">
+            <h2>About us</h2>
+            <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Praesent non volutpat tellus. Praesent non mattis quam. Morbi a enim massa. 
+                Nunc vel euismod enim, eget dignissim urna. Praesent nec odio ac purus rutrum laoreet at et est. 
+                Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrum</p>
+        </section>
+    </main>
 
     <footer>
         <section>
