--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <header>
             <a href="/"><img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100"></a>
 
-            <button>
+            <a href="#quick-links" class="hamburger-button">
                 <span></span>
                 <span></span>
                 <span></span>
-            </button>
+            </a>
 
             <nav>
                 <ul class="navigation-links">
@@ -49,7 +49,7 @@
         <section class="startscreen">
             <div>
                 <h1>Stensgaard farming</h1>
-                <p>In <strong>Denmark</strong></p>
+                <p>In Denmark</p>
                 <a href="/products">Check our products</a>
             </div>
         </section>
@@ -57,10 +57,33 @@
         <main>
             <section class="about-us">
                 <h2>About us</h2>
-                <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Praesent non volutpat tellus. Praesent non mattis quam. Morbi a enim massa. 
-                    Nunc vel euismod enim, eget dignissim urna. Praesent nec odio ac purus rutrum laoreet at et est. 
-                    Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrum</p>
+                <article>
+                    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Praesent non volutpat tellus. Praesent non mattis quam. Morbi a enim massa. 
+                        Nunc vel euismod enim, eget dignissim urna. Praesent nec odio ac purus rutrum laoreet at et est. 
+                        Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrumNunc vel euismod enim, eget dignissim urna. Praesent nec odio ac purus rutrum laoreet at et est. 
+                        Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrum</p>
+                    
+                    <img src="./img/tractor.jpg" alt="Tractor" width="380" height="200">
+                </article>
+            </section>
+
+            <section class="products">
+                <h2>Our Products</h2>
+                <p>Discover the range of products we have to offer, from cows to potatoes.</p>
+
+                <ul>
+                    <li>   
+                        <h3>Cows</h3>
+                    </li>
+                    <li>
+                        <h3>Potatoes</h3>
+                    </li>
+                    </li>
+                    <li>
+                        <h3>Peonies</h3>
+                    </li>
+                </ul>
             </section>
         </main>
 
@@ -73,7 +96,7 @@
                 <li>E-mail: <a href="mailto:info@stensgaard-farming.dk">info@stensgaard-farming.dk</a></li>
                 <li>Telephone: <a href="tel:+4512345678">+45 12 34 56 78</a></li>
             </ul>
-            <ul>
+            <ul id="quick-links">
                 <li><h3>Directly to</h3></li>
                 <li><a href="/about-us">About Us</a></li>
                 <li><a href="/products">Products</a></li>
