--- a/index.html
+++ b/index.html
@@ -73,15 +73,21 @@
                 <p>Discover the range of products we have to offer, from cows to potatoes.</p>
 
                 <ul>
-                    <li>   
+                    <li> 
+                        <a href="/products/cows">
                         <h3>Cows</h3>
+                        </a>
                     </li>
                     <li>
+                        <a href="/products/potatoes">
                         <h3>Potatoes</h3>
+                        </a>
                     </li>
                     </li>
                     <li>
+                        <a href="/products/peonies">
                         <h3>Peonies</h3>
+                        </a>
                     </li>
                 </ul>
             </section>
