--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <a href="/"><img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100"></a>
+            <a href="/https://stensgaard-farming.com"><img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100"></a>
 
             <a href="#quick-links" class="hamburger-button">
                 <span></span>
@@ -22,7 +22,7 @@
                 <ul class="navigation-links">
                     <li><a href="/about">About us</a></li>
                     <li><a href="/products">Products</a></li>
-                    <li><a href="/mellerstore.html">Mellerstore</a></li>
+                    <li><a href="/https://www.stensgaardfarming.com/mellerstore">Mellerstore</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             
