--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul class="navigation-links">
                     <li><a href="/about">About us</a></li>
                     <li><a href="/products">Products</a></li>
-                    <li><a href="/https://www.stensgaardfarming.com/mellerstore">Mellerstore</a></li>
+                    <li><a href="/mellerstore">Mellerstore</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             
