hamburger menu PE werkend

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Stensgaard Farming</title>
     <meta name="description" content="Stensgaard Farming is een boerderij gevestigd in denemarken die koeien houdt en aardappels verbouwt.">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./script.js" defer></script>
   </head>
 
     <body>
         <header>
             <a href="/https://stensgaard-farming.com"><img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100"></a>
 
-            <a href="#quick-links" class="hamburger-button">
+            <a href="#quick-links" id="hamburger-button">
                 <span></span>
                 <span></span>
                 <span></span>
