--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <a href="/https://stensgaard-farming.com"><img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100"></a>
+            <a href="/https://stensgaard-farming.com"><img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100" loading="lazy"></a>
 
             <a href="#quick-links" id="hamburger-button">
                 <span></span>
@@ -30,17 +30,17 @@
                 <ul class="language-switcher">
                     <li>
                         <a href="/danish">
-                            <img src="./img/danish-flag.png" alt="Danish Flag">
+                            <img src="./img/danish-flag.png" alt="Danish Flag" loading="lazy">
                         </a>
                     </li>
                     <li>
                         <a href="/english">
-                            <img src="./img/english-flag.png" alt="UK Flag">
+                            <img src="./img/english-flag.png" alt="UK Flag" loading="lazy">
                         </a>
                     </li>
                     <li>
                         <a href="/dutch">
-                            <img src="./img/dutch-flag.png" alt="Dutch Flag">
+                            <img src="./img/dutch-flag.png" alt="Dutch Flag" loading="lazy">
                         </a>
                     </li>
                 </ul>
@@ -66,10 +66,10 @@
                         Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrum</p>
                     
                     <div class="slideshow">
-                        <img src="./img/tractor.jpg" alt="Tractor" width="380" height="200">
-                        <img src="./img/potatoes-in-boxes.jpg" alt="Potatoes in boxes" width="380" height="200">
-                        <img src="./img/potatofield.jpg" alt="Potatofield" width="380" height="200">
-                        <img src="./img/peonies.png" alt="Harvesting" width="380" height="200">
+                        <img src="./img/tractor.jpg" alt="Tractor" width="380" height="200" loading="lazy">
+                        <img src="./img/potatoes-in-boxes.jpg" alt="Potatoes in boxes" width="380" height="200" loading="lazy">
+                        <img src="./img/potatofield.jpg" alt="Potatofield" width="380" height="200" loading="lazy">
+                        <img src="./img/peonies.png" alt="Harvesting" width="380" height="200" loading="lazy">
                     </div>
                 </article>
             </section>
