--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Stensgaard Farming</title>
     <meta name="description" content="Stensgaard Farming is een boerderij gevestigd in denemarken die koeien houdt en aardappels verbouwt.">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/startscreen.css">
+    <link rel="preload" href="/img/startscreen.jpg" as="image">
     <script src="./script.js" defer></script>
   </head>
 
@@ -66,7 +68,7 @@
                         Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrum</p>
                     
                     <div class="slideshow">
-                        <img src="./img/tractor.jpg" alt="Tractor" width="380" height="200" loading="lazy">
+                        <img src="./img/tractor.avif" alt="Tractor" width="380" height="200" loading="lazy">
                         <img src="./img/potatoes-in-boxes.jpg" alt="Potatoes in boxes" width="380" height="200" loading="lazy">
                         <img src="./img/potatofield.jpg" alt="Potatofield" width="380" height="200" loading="lazy">
                         <img src="./img/peonies.png" alt="Harvesting" width="380" height="200" loading="lazy">
