--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Stensgaard Farming is een boerderij gevestigd in denemarken die koeien houdt en aardappels verbouwt.">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/startscreen.css">
-    <link rel="preload" href="/img/startscreen.jpg" as="image">
+    <link rel="preload" href="./img/farm.avif" as="image" fetchpriority="high" width="1920" height="1080">
     <script src="./script.js" defer></script>
   </head>
 
