--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </nav>
         </header>
 
-        <section class="startscreen">
+        <section class="startscreen" style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../img/farm.avif'); background-repeat: no-repeat; background-size: cover; background-position: center;">
             <div>
                 <h1>Stensgaard farming</h1>
                 <p>In Denmark</p>
