converten naar avif

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </nav>
         </header>
 
-        <section class="startscreen" style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../img/farm.avif'); background-repeat: no-repeat; background-size: cover; background-position: center;">
+        <section class="startscreen">
             <div>
                 <h1>Stensgaard farming</h1>
                 <p>In Denmark</p>
@@ -69,7 +69,7 @@
                     
                     <div class="slideshow">
                         <img src="./img/tractor.avif" alt="Tractor" width="380" height="200" loading="lazy">
-                        <img src="./img/potatoes-in-boxes.jpg" alt="Potatoes in boxes" width="380" height="200" loading="lazy">
+                        <img src="./img/potatoes-in-boxes.avif" alt="Potatoes in boxes" width="380" height="200" loading="lazy">
                         <img src="./img/potatofield.jpg" alt="Potatofield" width="380" height="200" loading="lazy">
                         <img src="./img/peonies.png" alt="Harvesting" width="380" height="200" loading="lazy">
                     </div>
