--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/startscreen.css">
     <link rel="preload" href="./img/farm.avif" as="image" fetchpriority="high" width="1920" height="1080">
+    <link rel="preload" href="./font/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./font/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./font/Poppins-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <script src="./script.js" defer></script>
   </head>
 
