website tijdelijk offline

--- a/index.html
+++ b/index.html
@@ -1,134 +1,1 @@
-<!DOCTYPE html>
-<html lang="nl">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stensgaard Farming</title>
-    <meta name="description" content="Stensgaard Farming is een boerderij gevestigd in denemarken die koeien houdt en aardappels verbouwt.">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/startscreen.css">
-    <link rel="preload" href="./img/farm.avif" as="image" fetchpriority="high" width="1920" height="1080">
-    <link rel="preload" href="./font/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="./font/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="./font/Poppins-Bold.woff2" as="font" type="font/woff2" crossorigin>
-    <script src="./script.js" defer></script>
-  </head>
-
-    <body>
-        <header>
-            <a href="/https://stensgaard-farming.com"><img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100" loading="lazy"></a>
-
-            <a href="#quick-links" id="hamburger-button">
-                <span></span>
-                <span></span>
-                <span></span>
-            </a>
-
-            <nav>
-                <ul class="navigation-links">
-                    <li><a href="/about">About us</a></li>
-                    <li><a href="/products">Products</a></li>
-                    <li><a href="/mellerstore">Mellerstore</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                </ul>
-            
-                <ul class="language-switcher">
-                    <li>
-                        <a href="/danish">
-                            <img src="./img/danish-flag.png" alt="Danish Flag" loading="lazy">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/english">
-                            <img src="./img/english-flag.png" alt="UK Flag" loading="lazy">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/dutch">
-                            <img src="./img/dutch-flag.png" alt="Dutch Flag" loading="lazy">
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-
-        <section class="startscreen">
-            <div>
-                <h1>Stensgaard farming</h1>
-                <p>In Denmark</p>
-                <a href="/products">Check our products</a>
-            </div>
-        </section>
-
-        <main>
-            <section class="about-us">
-                <h2>About us</h2>
-                <article>
-                    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Praesent non volutpat tellus. Praesent non mattis quam. Morbi a enim massa. 
-                        Nunc vel euismod enim, eget dignissim urna. Praesent nec odio ac purus rutrum laoreet at et est. 
-                        Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrumNunc vel euismod enim, eget dignissim urna. Praesent nec odio ac purus rutrum laoreet at et est. 
-                        Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrum</p>
-                    
-                    <div class="slideshow">
-                        <img src="./img/tractor.avif" alt="Tractor" width="380" height="200" loading="lazy">
-                        <img src="./img/potatoes-in-boxes.avif" alt="Potatoes in boxes" width="380" height="200" loading="lazy">
-                        <img src="./img/potatofield.jpg" alt="Potatofield" width="380" height="200" loading="lazy">
-                        <img src="./img/peonies.png" alt="Harvesting" width="380" height="200" loading="lazy">
-                    </div>
-                </article>
-            </section>
-
-            <section class="products">
-                <h2>Our Products</h2>
-                <p>Discover the range of products we have to offer, from cows to potatoes.</p>
-
-                <ul>
-                    <li> 
-                        <a href="/products/cows">
-                        <h3>Cows</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/products/potatoes">
-                        <h3>Potatoes</h3>
-                        </a>
-                    </li>
-                    </li>
-                    <li>
-                        <a href="/products/peonies">
-                        <h3>Peonies</h3>
-                        </a>
-                    </li>
-                </ul>
-            </section>
-        </main>
-
-        <footer>
-            <section>
-                <ul>
-                    <li><h3>Contact</h3></li>
-                    <li>Address: Meller Storevej 9</li>
-                    <li>Agersted, 9330 Dronninglund</li>
-                    <li>E-mail: <a href="mailto:info@stensgaard-farming.dk">info@stensgaard-farming.dk</a></li>
-                    <li>Telephone: <a href="tel:+4512345678">+45 12 34 56 78</a></li>
-                </ul>
-                <ul id="quick-links">
-                    <li><h3>Directly to</h3></li>
-                    <li><a href="/about-us">About Us</a></li>
-                    <li><a href="/products">Products</a></li>
-                    <li><a href="/mellerstore-seeds">Mellerstore Seeds</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                </ul>
-                <ul>
-                    <li><h3>Follow us</h3></li>
-                    <li><a href="https://www.facebook.com/stensgaardfarming">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/stensgaardfarming">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/company/stensgaard-farming">LinkedIn</a></li>
-                </ul>
-            </section>
-            <p>Copyright © 2025 | Stensgaard farming</p>
-        </footer>   
-
-    </body>
-</html>
+<h1>stensgaard farming</h1>
