footer html fixed #1

--- a/stensgaard.html
+++ b/stensgaard.html
@@ -104,28 +104,36 @@
         </main>
 
         <footer>
-            <section>
-                <ul>
-                    <li><h3>Contact</h3></li>
-                    <li>Address: Meller Storevej 9</li>
-                    <li>Agersted, 9330 Dronninglund</li>
-                    <li>E-mail: <a href="mailto:info@stensgaard-farming.dk">info@stensgaard-farming.dk</a></li>
-                    <li>Telephone: <a href="tel:+4512345678">+45 12 34 56 78</a></li>
-                </ul>
-                <ul id="quick-links">
-                    <li><h3>Directly to</h3></li>
-                    <li><a href="/about-us">About Us</a></li>
-                    <li><a href="/products">Products</a></li>
-                    <li><a href="/mellerstore-seeds">Mellerstore Seeds</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                </ul>
-                <ul>
-                    <li><h3>Follow us</h3></li>
-                    <li><a href="https://www.facebook.com/stensgaardfarming">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/stensgaardfarming">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/company/stensgaard-farming">LinkedIn</a></li>
-                </ul>
-            </section>
+            <div class="footer-wrapper">
+                <section>
+                    <h2>Contact</h2>
+                    <ul>
+                        <li>Address: Meller Storevej 9</li>
+                        <li>Agersted, 9330 Dronninglund</li>
+                        <li>E-mail: <a href="mailto:info@stensgaard-farming.dk">info@stensgaard-farming.dk</a></li>
+                        <li>Telephone: <a href="tel:+4512345678">+45 12 34 56 78</a></li>
+                    </ul>
+                </section>
+
+                <section id="quick-links">
+                    <h2>Directly to</h2>
+                    <ul>
+                        <li><a href="/about-us">About Us</a></li>
+                        <li><a href="/products">Products</a></li>
+                        <li><a href="/mellerstore-seeds">Mellerstore Seeds</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Follow us</h2>
+                    <ul>
+                        <li><a href="https://www.facebook.com/stensgaardfarming">Facebook</a></li>
+                        <li><a href="https://www.instagram.com/stensgaardfarming">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/company/stensgaard-farming">LinkedIn</a></li>
+                    </ul>
+                </section>
+            </div>
             <p>Copyright © 2025 | Stensgaard farming</p>
         </footer>   
 
