description naar het engels #1

--- a/stensgaard.html
+++ b/stensgaard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stensgaard Farming</title>
-    <meta name="description" content="Stensgaard Farming is een boerderij gevestigd in denemarken die koeien houdt en aardappels verbouwt.">
+    <meta name="description" content="Stensgaard Farming is a Danish farm specializing in the production of high-quality potatoes, cows, and peonies. Explore our products and learn more about us.">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/startscreen.css">
     <link rel="preload" href="./img/farm.avif" as="image" fetchpriority="high" width="1920" height="1080">
