h3 headings bij our products weg #1

--- a/stensgaard.html
+++ b/stensgaard.html
@@ -85,19 +85,14 @@
 
                 <ul>
                     <li> 
-                        <a href="/products/cows">
-                        <h3>Cows</h3>
-                        </a>
+                        <a href="/products/cows">Cows</a>
                     </li>
                     <li>
-                        <a href="/products/potatoes">
-                        <h3>Potatoes</h3>
-                        </a>
+                        <a href="/products/potatoes">Potatoes</a>
+                    </li>
                     </li>
                     <li>
-                        <a href="/products/peonies">
-                        <h3>Peonies</h3>
-                        </a>
+                        <a href="/products/peonies">Peonies</a>
                     </li>
                 </ul>
             </section>
