logo verkleind en als picture element met src webp avif en png als fallback #1

--- a/stensgaard.html
+++ b/stensgaard.html
@@ -16,7 +16,14 @@
 
     <body>
         <header>
-            <a href="/https://stensgaard-farming.com"><img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100" loading="lazy"></a>
+            <a href="https://stensgaard-farming.com">
+                <picture>
+                  <source srcset="./img/logo.avif" type="image/avif">
+                  <source srcset="./img/logo.webp" type="image/webp">
+                  
+                  <img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100">
+                </picture>
+            </a>
 
             <a href="#quick-links" id="hamburger-button">
                 <span></span>
