alt op vlaggetjes naar taal veranderd ipv "danish flag" #1

--- a/stensgaard.html
+++ b/stensgaard.html
@@ -20,7 +20,7 @@
                 <picture>
                   <source srcset="./img/logo.avif" type="image/avif">
                   <source srcset="./img/logo.webp" type="image/webp">
-                  
+
                   <img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100">
                 </picture>
             </a>
@@ -42,17 +42,17 @@
                 <ul class="language-switcher">
                     <li>
                         <a href="/danish">
-                            <img src="./img/danish-flag.png" alt="Danish Flag" loading="lazy">
+                            <img src="./img/danish-flag.png" alt="Dansk" loading="lazy">
                         </a>
                     </li>
                     <li>
                         <a href="/english">
-                            <img src="./img/english-flag.png" alt="UK Flag" loading="lazy">
+                            <img src="./img/english-flag.png" alt="English" loading="lazy">
                         </a>
                     </li>
                     <li>
                         <a href="/dutch">
-                            <img src="./img/dutch-flag.png" alt="Dutch Flag" loading="lazy">
+                            <img src="./img/dutch-flag.png" alt="Dutch" loading="lazy">
                         </a>
                     </li>
                 </ul>
