alt attributes van slideshow weggehaald. Zijn puur illustratief #1

--- a/stensgaard.html
+++ b/stensgaard.html
@@ -78,10 +78,10 @@
                         Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrum</p>
                     
                     <div class="slideshow">
-                        <img src="./img/tractor.avif" alt="Tractor" width="380" height="200" loading="lazy">
-                        <img src="./img/potatoes-in-boxes.avif" alt="Potatoes in boxes" width="380" height="200" loading="lazy">
-                        <img src="./img/potatofield.jpg" alt="Potatofield" width="380" height="200" loading="lazy">
-                        <img src="./img/peonies.png" alt="Harvesting" width="380" height="200" loading="lazy">
+                        <img src="./img/tractor.avif" width="380" height="200" loading="lazy">
+                        <img src="./img/potatoes-in-boxes.avif" width="380" height="200" loading="lazy">
+                        <img src="./img/potatofield.jpg" width="380" height="200" loading="lazy">
+                        <img src="./img/peonies.png" width="380" height="200" loading="lazy">
                     </div>
                 </article>
             </section>
