--- a/stensgaard.html
+++ b/stensgaard.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Stensgaard Farming is a Danish farm specializing in the production of high-quality potatoes, cows, and peonies. Explore our products and learn more about us.">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/startscreen.css">
-    <link rel="preload" href="./img/farm.avif" as="image" fetchpriority="high" width="1920" height="1080">
+    <link rel="preload" href="./img/farm.avif" as="image" fetchpriority="high">
     <link rel="preload" href="./font/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="./font/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="./font/Poppins-Bold.woff2" as="font" type="font/woff2" crossorigin>
