--- a/mellerstore.html
+++ b/mellerstore.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stensgaard Farming</title>
-    <meta name="description" content="Stensgaard Farming is een boerderij gevestigd in denemarken die koeien houdt en aardappels verbouwt.">
+    <meta name="description" content="Stensgaard Farming is a Danish farm specializing in the production of high-quality potatoes, cows, and peonies. Explore our products and learn more about us.">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/startscreen.css">
+    <link rel="preload" href="./img/farm.avif" as="image" fetchpriority="high" width="1920" height="1080">
+    <link rel="preload" href="./font/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./font/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./font/Poppins-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <script src="./script.js" defer></script>
   </head>
 
     <body>
         <header>
-            <a href="/https://stensgaard-farming.com"><img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100"></a>
+            <a href="https://stensgaard-farming.com">
+                <picture>
+                  <source srcset="./img/logo.avif" type="image/avif">
+                  <source srcset="./img/logo.webp" type="image/webp">
+
+                  <img src="./img/logo.png" alt="Stensgaard Farming" width="100" height="100">
+                </picture>
+            </a>
 
             <a href="#quick-links" id="hamburger-button">
                 <span></span>
@@ -30,24 +42,24 @@
                 <ul class="language-switcher">
                     <li>
                         <a href="/danish">
-                            <img src="./img/danish-flag.png" alt="Danish Flag">
+                            <img src="./img/danish-flag.png" alt="Dansk" loading="lazy">
                         </a>
                     </li>
                     <li>
                         <a href="/english">
-                            <img src="./img/english-flag.png" alt="UK Flag">
+                            <img src="./img/english-flag.png" alt="English" loading="lazy">
                         </a>
                     </li>
                     <li>
                         <a href="/dutch">
-                            <img src="./img/dutch-flag.png" alt="Dutch Flag">
+                            <img src="./img/dutch-flag.png" alt="Dutch" loading="lazy">
                         </a>
                     </li>
                 </ul>
             </nav>
         </header>
 
-        <section class="startscreen" style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('./img/potatoes.jpg');">
+        <section class="startscreen" style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('./img/potatoes.avif');">
             <div>
                 <h1>Mellerstore Seeds ApS</h1>
                 <p>In Denmark</p>
@@ -61,28 +73,36 @@
 
 
         <footer>
-            <section>
-            <ul>
-                <li><h3>Contact</h3></li>
-                <li>Address: Meller Storevej 9</li>
-                <li>Agersted, 9330 Dronninglund</li>
-                <li>E-mail: <a href="mailto:info@stensgaard-farming.dk">info@stensgaard-farming.dk</a></li>
-                <li>Telephone: <a href="tel:+4512345678">+45 12 34 56 78</a></li>
-            </ul>
-            <ul id="quick-links">
-                <li><h3>Directly to</h3></li>
-                <li><a href="/about-us">About Us</a></li>
-                <li><a href="/products">Products</a></li>
-                <li><a href="/mellerstore-seeds">Mellerstore Seeds</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-            <ul>
-                <li><h3>Follow us</h3></li>
-                <li><a href="https://www.facebook.com/stensgaardfarming">Facebook</a></li>
-                <li><a href="https://www.instagram.com/stensgaardfarming">Instagram</a></li>
-                <li><a href="https://www.linkedin.com/company/stensgaard-farming">LinkedIn</a></li>
-            </ul>
-            </section>
+            <div class="footer-wrapper">
+                <section>
+                    <h2>Contact</h2>
+                    <ul>
+                        <li>Address: Meller Storevej 9</li>
+                        <li>Agersted, 9330 Dronninglund</li>
+                        <li>E-mail: <a href="mailto:info@stensgaard-farming.dk">info@stensgaard-farming.dk</a></li>
+                        <li>Telephone: <a href="tel:+4512345678">+45 12 34 56 78</a></li>
+                    </ul>
+                </section>
+
+                <section id="quick-links">
+                    <h2>Directly to</h2>
+                    <ul>
+                        <li><a href="/about-us">About Us</a></li>
+                        <li><a href="/products">Products</a></li>
+                        <li><a href="/mellerstore-seeds">Mellerstore Seeds</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Follow us</h2>
+                    <ul>
+                        <li><a href="https://www.facebook.com/stensgaardfarming">Facebook</a></li>
+                        <li><a href="https://www.instagram.com/stensgaardfarming">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/company/stensgaard-farming">LinkedIn</a></li>
+                    </ul>
+                </section>
+            </div>
             <p>Copyright © 2025 | Stensgaard farming</p>
         </footer>   
 
