--- a/stensgaard.html
+++ b/stensgaard.html
@@ -25,7 +25,7 @@
                 </picture>
             </a>
 
-            <a href="#quick-links" id="hamburger-button">
+            <a href="#quick-links" id="hamburger-button" aria-label="Menu">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -102,6 +102,11 @@
                         <a href="/products/peonies">Peonies</a>
                     </li>
                 </ul>
+            </section>
+
+            <section class="internship">
+                <h2>Looking for an internship?</h2>
+                <p>We’re always open to motivated students who want to gain experience on the farm. Reach out to us!</p>
             </section>
         </main>
 
