--- a/stensgaard.html
+++ b/stensgaard.html
@@ -115,14 +115,14 @@
 
                 <ul>
                     <li> 
-                        <a href="/products/cows">Cows</a>
+                        <a href="/cows">Cows</a>
                     </li>
                     <li>
-                        <a href="/products/potatoes">Potatoes</a>
+                        <a href="/potatoes">Potatoes</a>
                     </li>
                     </li>
                     <li>
-                        <a href="/products/peonies">Peonies</a>
+                        <a href="/peonies">Peonies</a>
                     </li>
                 </ul>
             </section>
