--- a/stensgaard.html
+++ b/stensgaard.html
@@ -71,11 +71,7 @@
             <section class="about-us">
                 <h2>About us</h2>
                 <article>
-                    <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Praesent non volutpat tellus. Praesent non mattis quam. Morbi a enim massa. 
-                        Nunc vel euismod enim, eget dignissim urna. Praesent nec odio ac purus rutrum laoreet at et est. 
-                        Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrumNunc vel euismod enim, eget dignissim urna. Praesent nec odio ac purus rutrum laoreet at et est. 
-                        Nunc id metus purus. Sed ultricies auctor ex non condimentum. Integer finibus ac felis rutrum</p>
+                    <p>Stensgaard Farming is a family-run farm located in the rolling countryside of Dronninglund, Northern Denmark. We grow high-quality potatoes, raise healthy dairy cattle, and cultivate beautiful peonies that reflect the natural beauty of our surroundings. With deep roots in Danish farming traditions, we combine experience and care with modern, sustainable methods to ensure quality in everything we do. Every crop and every animal is tended with respect for nature, our land, and future generations. At Stensgaard Farming, we believe that true quality comes from dedication, hard work, and a genuine love for what we do.</p>
                     
                     <div class="slideshow">
                         <picture>
